added changes according to review part3