@@ -11,21 +11,12 @@ import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 class FileWriterImplTest {
     private static final String TEST_FILE_PATH = "src/test/resources/reportTest.csv";
     private static final String UNWRITABLE_FILE_PATH = "/root/unwritable/file.txt";
     private static final FileWriter fileWriter = new FileWriterImpl();
-
-    @BeforeEach
-    void setUp() throws IOException {
-        File testFile = new File(TEST_FILE_PATH);
-        if (!testFile.exists()) {
-            testFile.createNewFile();
-        }
-    }
 
     @AfterEach
     void tearDown() {
@@ -37,10 +28,11 @@ class FileWriterImplTest {
 
     @Test
     void writeToFile_createNewFileWithData_isOk() throws IOException {
-        List<String> expected = Arrays.asList(
-                new String("fruit,quantity"),
-                new String("banana,10"),
-                new String("apple,5"));
+        List<String> expected = List.of(
+                "fruit,quantity",
+                "banana,10",
+                "apple,5"
+        );
         fileWriter.writeToFile(expected, new File(TEST_FILE_PATH));
         List<String> actual = Files.readAllLines(Path.of(TEST_FILE_PATH));
         assertEquals(expected, actual);
